# django-site-docker

./: .env  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Dockerfile.yml  Dockerfile_nginx  Dockerfile_nginx.yml  Makefile  README.md  TODO.txt  appconfig.conf  docker-compose.yml  dump.sql  get DB dump from docker container.txt  nginx-conf.d  nginx.conf  nginx2.conf  pyproject.toml  r.txt  reqirements.txt  requirements.txt  вытащить дамп БД из контейнера.txt
.github/workflows/: django.yml  main.yml
docker/: .env  run-app.sh  run-celery.sh  run-server.sh
project/: .coverage  .env  celery.py  db.sqlite3
project/API/: permissions.py  serializers.py  urls.py  views.py
project/api/: pagination.py  permissions.py  serializers.py
project/newsapp/: admin.py  apps.py  forms.py  middleware.py  mixins.py  models.py  news_urls.py  tasks.py  tests.py  urls.py  views.py
project/project/: __init__.py  celery.py  celery_config.py  redis.py  redis_config.py  settings.py  urls.py
project/static/: js.js  style.css
project/templates/: add_news.html  auth_token.html  base.html  categories_list.html  edit_news.html  edit_user_profile.html  jwt_token.html  login.html  news_by_category.html  news_list.html  news_page.html  one_news.html  register.html
src/: .coveragerc  .env  pytest.ini
src/categoriesapp/: apps.py  models.py
src/commentsapp/: apps.py  models.py  views.py
src/likesapp/: apps.py  models.py  views.py
src/newsapp/: admin.py  apps.py  auth_views.py  forms.py  middleware.py  mixins.py  (+8 more)
temp/: gunicorn.service  nginx deploy guide.txt
(+137 files in other folders)
