[tool.poetry]
name = "djangosite"
version = "0.1.0"
description = ""
authors = ["night <night@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.5"
django-debug-toolbar = "^3.7.0"
django-ckeditor = "^6.5.1"
python-dotenv = "^0.21.0"
djoser = "^2.1.0"
pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
